src/web/snapshots/rustlog__web__tests__frontend_missing_file.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /missing.png
status: 404 Not Found
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
404
