src/web/snapshots/rustlog__web__tests__list_all.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /list
status: 400 Bad Request
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Invalid param: Specify query parameter: channel or channelid
