src/web/snapshots/rustlog__web__tests__list_channel.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /list?channelid=11111
status: 200 OK
content-type: application/json
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
{
  "availableLogs": [
    {
      "day": "15",
      "month": "3",
      "year": "2026"
    },
    {
      "day": "2",
      "month": "3",
      "year": "2026"
    },
    {
      "day": "1",
      "month": "3",
      "year": "2026"
    },
    {
      "day": "10",
      "month": "2",
      "year": "2026"
    }
  ]
}
