src/web/snapshots/rustlog__web__tests__list_channel_user.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /list?channelid=11111&userid=22222
status: 200 OK
content-type: application/json
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
{
  "availableLogs": [
    {
      "month": "3",
      "year": "2026"
    },
    {
      "month": "2",
      "year": "2026"
    }
  ]
}
