src/web/snapshots/rustlog__web__tests__metrics.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /metrics
status: 200 OK
content-type: text/plain; charset=utf-8
cache-control: no-cache
---
<body omitted>
