src/web/snapshots/rustlog__web__tests__namehistory.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /namehistory/22222
status: 200 OK
content-type: application/json
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
[
  {
    "first_timestamp": "2026-02-10T05:00:00Z",
    "last_timestamp": "2026-03-15T17:00:00Z",
    "user_login": "alice"
  }
]
